# noir-rail

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
circuits/: package.json
circuits/ceremony/membership/: verification_key.json
circuits/ceremony/transfer/: verification_key.json
circuits/ceremony/withdraw/: verification_key.json
circuits/scripts/: build.sh  setup.sh
circuits/src/: membership.circom  transfer.circom  withdraw.circom
cli/circom2soroban/: Cargo.toml
cli/circom2soroban/src/: main.rs
cli/noterail/: Cargo.toml
cli/noterail/src/: config.rs  main.rs
cli/noterail/src/cli/: args.rs  commands.rs
cli/noterail/src/crypto/: coin.rs  conversions.rs
cli/noterail/src/io/: files.rs  (+1 more)
cli/noterail/tests/: integration_tests.rs
contracts/shielded-pool/: Cargo.toml
contracts/shielded-pool/scripts/: deploy.sh  vk-hex.mjs
contracts/shielded-pool/src/: lib.rs  test.rs
contracts/shielded-pool/test_snapshots/test/: commitment_is_deterministic_for_same_inputs.1.json  deposit_escrows_and_appends_commitment.1.json  deposit_rejects_non_positive_amount.1.json  verify_membership_accepts_a_real_proof.1.json  verify_membership_rejects_a_foreign_allow_list.1.json  verify_membership_rejects_an_unanchored_state_root.1.json  verify_membership_rejects_an_unrecognised_allow_list.1.json
docs/: 00-setup.md
docs/book/: 01-why.md  02-architecture.md  03-notes.md  04-circuits.md  05-poseidon.md  06-ceremony.md  07-contract.md  08-circom2soroban.md  09-sdk.md  10-terminal.md  11-flows.md  12-security.md  13-roadmap.md  README.md
tools/: demo-transfer.sh  demo.sh
web/: next.config.mjs  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/app/: layout.tsx  loading.tsx  page.tsx
web/app/terminal/: page.tsx
web/components/: ActivityStream.tsx  ShieldDialog.tsx  WithdrawDialog.tsx
web/components/app/: AppShell.tsx  ConfirmDialog.tsx  PageHead.tsx  Skeleton.tsx  wallet-context.tsx
web/components/landing/: ColorBends.d.ts  ColorBends.jsx  LivingBackground.tsx  MobileCarousel.tsx  Preloader.tsx  SettlementDiagram.tsx  TerminalMock.tsx  ui.tsx
web/lib/: chapters.ts  config.ts  disclosure.ts  notes.ts  prove.ts  stellar.ts  wallet.ts
web/public/circuits/: membership.wasm  verification_key.json  withdraw.wasm
web/types/: snarkjs.d.ts
(+18 files in other folders)
