[workspace]
resolver = "2"
members = [
  "contracts/shielded-pool",
  "contracts/libs/lean-imt",
  "contracts/libs/groth16",
  "cli/circom2soroban",
  "cli/noterail",
]

# Tracks Stellar testnet's protocol. Bumped 25 → 26 when testnet upgraded to protocol 27 and
# protocol-25 deposits began exceeding the per-tx instruction budget. soroban-poseidon 26 stays
# byte-matched to the circuit's poseidon255 — verified by the `verify_membership` contract test,
# which deposits via the on-chain Poseidon and verifies a proof built with the circuit's Poseidon.
[workspace.dependencies]
soroban-sdk = { version = "26" }
soroban-poseidon = { version = "26" }

# Size- and cost-optimized wasm for the settlement path.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
